[workspace]
members = ["programs/*"]
resolver = "2"

[patch.crates-io]
# Полный список блокировки для Rust 1.68
borsh = { git = "https://github.com/near/borsh-rs", rev = "cd83842" }
borsh-derive = { git = "https://github.com/near/borsh-rs", rev = "cd83842" }
indexmap = { git = "https://github.com/indexmap-rs/indexmap", tag = "1.9.3" }
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.1" }
solana-program = { git = "https://github.com/solana-labs/solana", tag = "v1.17.0" }
