[package]
name = "orbital_pulse"
version = "0.1.0"
description = "Autonomous ontological system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbital_pulse"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"

[patch.crates-io]
# Принудительно откатываем виновников ошибок на стабильные версии
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.1" }
# Если wit-bindgen продолжает мешать, Cargo Nightly теперь сможет его переварить
